--- a/src/main/resources/com/example/todo_app/tasksPage.fxml
+++ b/src/main/resources/com/example/todo_app/tasksPage.fxml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import io.github.palexdev.materialfx.controls.legacy.MFXLegacyListView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.todo_app.TasksPageController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #cfd8dc;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.todo_app.TasksPageController">
+   <children>
+      <AnchorPane prefHeight="92.0" prefWidth="700.0" style="-fx-background-color: #1565c0;">
+         <children>
+            <Label alignment="CENTER" layoutX="245.0" layoutY="43.0" prefHeight="27.0" prefWidth="192.0" text="Tasks" textFill="WHITE">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="27.0" prefWidth="700.0" style="-fx-background-color: #003c8f;" />
+      <MFXLegacyListView fx:id="tasksPageListView" depthLevel="LEVEL5" layoutX="350.0" layoutY="99.0" prefHeight="286.0" prefWidth="339.0" />
+      <MFXTextField fx:id="tasksPageTaskFld" layoutX="22.0" layoutY="160.0" minHeight="-Infinity" prefHeight="39.0" prefWidth="318.0" promptText="Task" style="-fx-background-color: #9ea7aa;">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </MFXTextField>
+      <MFXTextField fx:id="tasksPageDescriptionFld" layoutX="22.0" layoutY="224.0" minHeight="-Infinity" prefHeight="39.0" prefWidth="318.0" promptText="Description" style="-fx-background-color: #9ea7aa;">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </MFXTextField>
+      <MFXButton fx:id="tasksPageSaveBtn" buttonType="RAISED" depthLevel="LEVEL5" layoutX="100.0" layoutY="302.0" prefHeight="39.0" prefWidth="162.0" style="-fx-background-color: #90a4ae;" text="Save">
+         <effect>
+            <DropShadow />
+         </effect>
+         <font>
+            <Font size="14.0" />
+         </font>
+      </MFXButton>
+      <Label layoutX="22.0" layoutY="109.0" prefHeight="30.0" prefWidth="198.0" text="Add new task from here :" textFill="#a20606">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
