--- a/src/main/resources/com/example/todo_app/showTasksCell.fxml
+++ b/src/main/resources/com/example/todo_app/showTasksCell.fxml
@@ -11,8 +11,8 @@
    <children>
       <AnchorPane layoutX="10.0" layoutY="9.0" prefHeight="84.0" prefWidth="320.0" style="-fx-background-color: #a4a4a4;">
          <children>
-            <Label layoutX="20.0" layoutY="5.0" prefHeight="23.0" prefWidth="195.0" text="description" textFill="WHITE" />
-            <Label layoutX="42.0" layoutY="32.0" prefHeight="23.0" prefWidth="264.0" text="task" textFill="WHITE">
+            <Label fx:id="tasksCellDescriptionFld" layoutX="20.0" layoutY="5.0" prefHeight="23.0" prefWidth="195.0" text="description" textFill="WHITE" />
+            <Label fx:id="tasksCellTaskFld" layoutX="42.0" layoutY="32.0" prefHeight="23.0" prefWidth="264.0" text="task" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
@@ -22,7 +22,7 @@
                   <Image url="@../../../assets/icons8-task-100.png" />
                </image>
             </ImageView>
-            <Label layoutX="123.0" layoutY="56.0" prefHeight="18.0" prefWidth="181.0" text="date created" textFill="#0a46ea">
+            <Label fx:id="tasksCellDateCreatedFld" layoutX="123.0" layoutY="56.0" prefHeight="18.0" prefWidth="181.0" text="date created" textFill="#0a46ea">
                <font>
                   <Font size="10.0" />
                </font>
