--- a/src/main/resources/com/example/todo_app/tasksPage.fxml
+++ b/src/main/resources/com/example/todo_app/tasksPage.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #cfd8dc;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.todo_app.TasksPageController">
    <children>
       <AnchorPane prefHeight="92.0" prefWidth="700.0" style="-fx-background-color: #1565c0;">
@@ -21,18 +20,18 @@
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="27.0" prefWidth="700.0" style="-fx-background-color: #003c8f;" />
-      <MFXLegacyListView fx:id="tasksPageListView" depthLevel="LEVEL5" layoutX="350.0" layoutY="99.0" prefHeight="286.0" prefWidth="339.0" />
-      <MFXTextField fx:id="tasksPageTaskFld" layoutX="22.0" layoutY="160.0" minHeight="-Infinity" prefHeight="39.0" prefWidth="318.0" promptText="Task" style="-fx-background-color: #9ea7aa;">
+      <MFXLegacyListView fx:id="tasksPageListView" depthLevel="LEVEL5" layoutX="8.0" layoutY="98.0" prefHeight="295.0" prefWidth="352.0" />
+      <MFXTextField fx:id="tasksPageTaskFld" layoutX="372.0" layoutY="167.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="302.0" promptText="Task" style="-fx-background-color: #9ea7aa;">
          <font>
             <Font size="13.0" />
          </font>
       </MFXTextField>
-      <MFXTextField fx:id="tasksPageDescriptionFld" layoutX="22.0" layoutY="224.0" minHeight="-Infinity" prefHeight="39.0" prefWidth="318.0" promptText="Description" style="-fx-background-color: #9ea7aa;">
+      <MFXTextField fx:id="tasksPageDescriptionFld" layoutX="372.0" layoutY="222.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="302.0" promptText="Description" style="-fx-background-color: #9ea7aa;">
          <font>
             <Font size="13.0" />
          </font>
       </MFXTextField>
-      <MFXButton fx:id="tasksPageSaveBtn" buttonType="RAISED" depthLevel="LEVEL5" layoutX="100.0" layoutY="302.0" prefHeight="39.0" prefWidth="162.0" style="-fx-background-color: #90a4ae;" text="Save">
+      <MFXButton fx:id="tasksPageSaveBtn" buttonType="RAISED" depthLevel="LEVEL5" layoutX="564.0" layoutY="279.0" prefHeight="30.0" prefWidth="109.0" style="-fx-background-color: #90a4ae;" text="Add">
          <effect>
             <DropShadow />
          </effect>
@@ -40,7 +39,7 @@
             <Font size="14.0" />
          </font>
       </MFXButton>
-      <Label layoutX="22.0" layoutY="109.0" prefHeight="30.0" prefWidth="198.0" text="Add new task from here :" textFill="#a20606">
+      <Label layoutX="372.0" layoutY="105.0" prefHeight="30.0" prefWidth="198.0" text="Add new task from here :" textFill="#a20606">
          <font>
             <Font size="14.0" />
          </font>
