--- a/src/main/resources/com/example/todo_app/showTasksCell.fxml
+++ b/src/main/resources/com/example/todo_app/showTasksCell.fxml
@@ -10,22 +10,32 @@
    <children>
       <AnchorPane layoutX="6.0" layoutY="7.0" prefHeight="84.0" prefWidth="320.0" style="-fx-background-color: #a4a4a4;">
          <children>
-            <Label fx:id="tasksCellDescriptionFld" layoutX="20.0" layoutY="5.0" prefHeight="23.0" prefWidth="195.0" text="description" textFill="WHITE" />
-            <Label fx:id="tasksCellTaskFld" layoutX="42.0" layoutY="32.0" prefHeight="23.0" prefWidth="264.0" text="task" textFill="WHITE">
+            <Label fx:id="tasksCellDescriptionFld" layoutX="11.0" layoutY="5.0" prefHeight="22.0" prefWidth="225.0" text="description" textFill="#9f2525" />
+            <Label fx:id="tasksCellTaskFld" layoutX="42.0" layoutY="36.0" prefHeight="23.0" prefWidth="264.0" text="task">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <ImageView fitHeight="36.0" fitWidth="39.0" layoutX="2.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="36.0" fitWidth="39.0" layoutX="2.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../assets/icons8-task-100.png" />
                </image>
             </ImageView>
-            <Label fx:id="tasksCellDateCreatedFld" alignment="CENTER" layoutX="137.0" layoutY="62.0" prefHeight="18.0" prefWidth="181.0" text="date created" textFill="#0a46ea">
+            <Label fx:id="tasksCellDateCreatedFld" alignment="CENTER_RIGHT" layoutX="193.0" layoutY="62.0" prefHeight="18.0" prefWidth="121.0" text="date created" textFill="#0a46ea">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
+            <ImageView fx:id="tasksCellDeleteIcon" fitHeight="26.0" fitWidth="22.0" layoutX="291.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../assets/icons8-close-48.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="tasksCellEditIcon" fitHeight="26.0" fitWidth="22.0" layoutX="265.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../assets/icons8-edit-link-96.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
