--- a/src/main/resources/com/example/todo_app/signUpPage.fxml
+++ b/src/main/resources/com/example/todo_app/signUpPage.fxml
@@ -6,20 +6,26 @@
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #bdbdbd;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.todo_app.SignUpPageController">
+<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.todo_app.SignUpPageController">
     <children>
-        <AnchorPane layoutX="-2.0" prefHeight="74.0" prefWidth="711.0" style="-fx-background-color: #69f0ae;">
+        <AnchorPane layoutX="-2.0" prefHeight="81.0" prefWidth="711.0" style="-fx-background-color: #484848;">
             <children>
-                <AnchorPane prefHeight="26.0" prefWidth="711.0" style="-fx-background-color: #2bbd7e;" />
-                <Label alignment="CENTER" layoutX="246.0" layoutY="32.0" prefHeight="35.0" prefWidth="218.0" text="2Do" textFill="#575454">
+                <AnchorPane prefHeight="20.0" prefWidth="711.0" style="-fx-background-color: #212121;" />
+                <Label alignment="CENTER" layoutX="246.0" layoutY="32.0" prefHeight="35.0" prefWidth="218.0" text="2Do" textFill="WHITE">
                     <font>
                         <Font size="24.0" />
                     </font>
                 </Label>
+            <ImageView fx:id="signUpPageBackIcon" fitHeight="35.0" fitWidth="39.0" layoutX="2.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../assets/icons8-back-64%20(3).png" />
+               </image>
+            </ImageView>
             </children>
         </AnchorPane>
         <MFXTextField fx:id="signUpPageFirstnameFld" layoutX="25.0" layoutY="136.0" minHeight="-Infinity" prefHeight="35.0" prefWidth="319.0" promptText="Firstname" style="-fx-background-color: #cfcfcf;" />
@@ -27,17 +33,17 @@
         <MFXTextField fx:id="signUpPageUsernameFld" layoutX="22.0" layoutY="280.0" minHeight="-Infinity" prefHeight="35.0" prefWidth="319.0" promptText="Username" style="-fx-background-color: #cfcfcf;" />
         <MFXPasswordField fx:id="signUpPagePasswordFld" layoutX="361.0" layoutY="280.0" minHeight="-Infinity" prefHeight="35.0" prefWidth="319.0" promptText="Password" style="-fx-background-color: #cfcfcf;" />
         <MFXTextField fx:id="signUpPageAddressFld" layoutX="25.0" layoutY="188.0" minHeight="-Infinity" prefHeight="35.0" prefWidth="659.0" promptText="Address" style="-fx-background-color: #cfcfcf;" />
-        <MFXCheckbox fx:id="signUpPageMaleBox" layoutX="285.0" layoutY="240.0" selected="true" text="Male">
+        <MFXCheckbox fx:id="signUpPageMaleBox" layoutX="285.0" layoutY="240.0" selected="true" text="Male" textFill="WHITE">
             <font>
                 <Font size="13.0" />
             </font>
         </MFXCheckbox>
-        <MFXCheckbox fx:id="signUpPageFemaleBox" layoutX="361.0" layoutY="240.0" text="female">
+        <MFXCheckbox fx:id="signUpPageFemaleBox" layoutX="361.0" layoutY="240.0" text="female" textFill="WHITE">
             <font>
                 <Font size="13.0" />
             </font>
         </MFXCheckbox>
-        <MFXButton fx:id="signUpPageSignupBtn" buttonType="RAISED" layoutX="223.0" layoutY="334.0" prefHeight="42.0" prefWidth="264.0" style="-fx-background-color: #9e9e9e;" text="Sign up">
+        <MFXButton fx:id="signUpPageSignupBtn" buttonType="RAISED" layoutX="244.0" layoutY="334.0" prefHeight="42.0" prefWidth="218.0" style="-fx-background-color: #484848;" text="Sign up" textFill="WHITE">
             <effect>
                 <DropShadow />
             </effect>
@@ -45,7 +51,7 @@
                 <Font size="14.0" />
             </font>
         </MFXButton>
-        <Label layoutX="33.0" layoutY="89.0" prefHeight="27.0" prefWidth="362.0" text="Please fill the information :" textFill="#574f4f">
+        <Label layoutX="26.0" layoutY="92.0" prefHeight="27.0" prefWidth="362.0" text="Please fill the information :" textFill="#eaff00">
             <font>
                 <Font size="16.0" />
             </font>
